Completed storage to local function

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Solo app project</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  </head>
-  <body>
-  	<input class="textField" type="text" name="firstInputField">
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>Set/get to local storage</title>
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.js"
+	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+	crossorigin="anonymous"></script>
+	<script src="app.js"></script>
+</head>
+<body>
+	<input class="textField" type="text" name="firstInputField">
+	<button class="setData">Click to Save Text</button>
+	<button class="getData">Click to Get Text</button>
+	<div class='debug'></div>
+</body>
 </html>
