--- a/index.html
+++ b/index.html
@@ -9,23 +9,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
 	<div class='title'>&lt;<div class="blink_me">/</div>snippity&gt;</div>
 	
 	
 	<div class='all_info'>
-		<select name="dropdown" class='mySelect'></select><br>
+		<select name="dropdown" class='mySelect'> <option selected disabled hidden>Select A Snippet</option></select><br>
 		<input class="textField" type="text" name="firstInputField" placeholder="Snippet Name"><br>
 		<textarea class="codeArea" placeholder="Enter your Snippet here"></textarea>
 	</div>
 
 	<div class='buttons'>
 		<button class="setData">Save Snippet</button>
-		<button class="resetData" onclick="ClearFields()">Reset Snippet</button>
-		
-	</div>
-
-	<div class = 'extra'>
-
+		<button class="resetData">Reset Snippet</button>		
 	</div>
 
 </body>
